parse/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABS
    ATN
    CLK
    COS
    EXP
    INT
    LOG
    REM
    RND
    SGN
    SIN
    SQR
    TAB
    TAN

Grammar

Rule 0     S' -> line
Rule 1     line -> INTEGER statement
Rule 2     line -> INTEGER
Rule 3     line -> error statement
Rule 4     statement -> let
Rule 5     statement -> end
Rule 6     statement -> if
Rule 7     statement -> goto
Rule 8     statement -> for
Rule 9     statement -> next
Rule 10    statement -> print
Rule 11    statement -> cls
Rule 12    statement -> input
Rule 13    statement -> def
Rule 14    statement -> dumpvar
Rule 15    statement -> dumpfun
Rule 16    statement -> on
Rule 17    statement -> gosub
Rule 18    statement -> return
Rule 19    statement -> data
Rule 20    statement -> restore
Rule 21    statement -> read
Rule 22    statement -> dim
Rule 23    statement -> randomize
Rule 24    statement -> stop
Rule 25    statement -> option
Rule 26    statement -> eval_exp
Rule 27    option -> OPTION BASE INTEGER
Rule 28    option -> OPTION error INTEGER
Rule 29    option -> OPTION BASE error
Rule 30    eval_exp -> EVAL numeric_expression
Rule 31    randomize -> RANDOMIZE
Rule 32    let -> LET STRING_VARIABLE EQUALS string_expression
Rule 33    let -> LET NUMERIC_ARRAY INTEGER RPAREN EQUALS numeric_expression
Rule 34    let -> LET NUMERIC_ARRAY INTEGER COMMA INTEGER RPAREN EQUALS numeric_expression
Rule 35    let -> LET STRING_ARRAY INTEGER RPAREN EQUALS string_expression
Rule 36    let -> LET STRING_ARRAY INTEGER COMMA INTEGER RPAREN EQUALS string_expression
Rule 37    let -> LET SIMPLE_NUMERIC_VARIABLE EQUALS numeric_expression
Rule 38    dim -> DIM STRING_ARRAY INTEGER RPAREN
Rule 39    dim -> DIM NUMERIC_ARRAY INTEGER RPAREN
Rule 40    dim -> DIM STRING_ARRAY INTEGER COMMA INTEGER RPAREN
Rule 41    dim -> DIM NUMERIC_ARRAY INTEGER COMMA INTEGER RPAREN
Rule 42    dim -> DIM error INTEGER RPAREN
Rule 43    dim -> DIM error INTEGER COMMA INTEGER RPAREN
Rule 44    dumpvar -> DUMPVAR
Rule 45    dumpfun -> DUMPFUN
Rule 46    if -> IF numeric_expression EQUALS numeric_expression THEN INTEGER
Rule 47    if -> IF numeric_expression LT GT numeric_expression THEN INTEGER
Rule 48    if -> IF numeric_expression GT numeric_expression THEN INTEGER
Rule 49    if -> IF numeric_expression LT numeric_expression THEN INTEGER
Rule 50    if -> IF numeric_expression GT EQUALS numeric_expression THEN INTEGER
Rule 51    if -> IF numeric_expression LT EQUALS numeric_expression THEN INTEGER
Rule 52    if -> IF string_expression EQUALS string_expression THEN INTEGER
Rule 53    goto -> GOTO INTEGER
Rule 54    goto -> GOTO error
Rule 55    gosub -> GOSUB INTEGER
Rule 56    gosub -> GOSUB error
Rule 57    return -> RETURN
Rule 58    on -> ON numeric_expression GO TO line_number_list
Rule 59    on -> ON error GO TO line_number_list
Rule 60    on -> ON numeric_expression error TO line_number_list
Rule 61    on -> ON numeric_expression GO error line_number_list
Rule 62    on -> ON numeric_expression GO TO error
Rule 63    line_number_list -> line_number_list line_number_list_sep line_number_list
Rule 64    line_number_list -> INTEGER
Rule 65    line_number_list_sep -> COMMA
Rule 66    data -> DATA data_list
Rule 67    data_list -> data_list data_list_sep data_list
Rule 68    data_list -> expression
Rule 69    data_list_sep -> COMMA
Rule 70    read -> READ read_list
Rule 71    read_list -> read_list read_list_sep read_list
Rule 72    read_list -> SIMPLE_NUMERIC_VARIABLE
Rule 73    read_list -> STRING_VARIABLE
Rule 74    read_list_sep -> COMMA
Rule 75    restore -> RESTORE
Rule 76    for -> FOR SIMPLE_NUMERIC_VARIABLE EQUALS numeric_expression TO numeric_expression STEP numeric_expression
Rule 77    for -> FOR SIMPLE_NUMERIC_VARIABLE EQUALS numeric_expression TO numeric_expression
Rule 78    next -> NEXT SIMPLE_NUMERIC_VARIABLE
Rule 79    print -> PRINT print_list
Rule 80    print -> PRINT
Rule 81    print_list -> print_list_sep print_list
Rule 82    print_list -> print_list print_list_sep print_list
Rule 83    print_list -> print_list print_list_sep
Rule 84    print_list -> print_list_sep
Rule 85    print_list -> expression
Rule 86    print_list_sep -> print_semi_colon
Rule 87    print_list_sep -> print_comma
Rule 88    print_semi_colon -> SEMI_COLON
Rule 89    print_comma -> COMMA
Rule 90    def -> DEF FN EQUALS fn_body_numeric_expression
Rule 91    def -> DEF FN LPAREN SIMPLE_NUMERIC_VARIABLE RPAREN EQUALS fn_body_numeric_expression
Rule 92    fn_body_numeric_expression -> LPAREN fn_body_numeric_expression RPAREN
Rule 93    fn_body_numeric_expression -> fn_body_numeric_expression CIRCUMFLEX fn_body_numeric_expression
Rule 94    fn_body_numeric_expression -> fn_body_numeric_expression TIMES fn_body_numeric_expression
Rule 95    fn_body_numeric_expression -> fn_body_numeric_expression DIVIDE fn_body_numeric_expression
Rule 96    fn_body_numeric_expression -> fn_body_numeric_expression PLUS fn_body_numeric_expression
Rule 97    fn_body_numeric_expression -> fn_body_numeric_expression MINUS fn_body_numeric_expression
Rule 98    fn_body_numeric_expression -> empty
Rule 99    fn_body_numeric_expression -> fn_body_primary
Rule 100   fn_body_numeric_expression -> MINUS fn_body_numeric_expression
Rule 101   fn_body_primary -> INTEGER
Rule 102   fn_body_primary -> FLOAT
Rule 103   fn_body_primary -> fn_body_u_num_fn
Rule 104   fn_body_primary -> fn_body_b_num_fn
Rule 105   fn_body_primary -> fn_body_simple_numeric_variable
Rule 106   fn_body_primary -> fn_body_numeric_array
Rule 107   fn_body_u_num_fn -> FN LPAREN fn_body_numeric_expression RPAREN
Rule 108   fn_body_u_num_fn -> FN
Rule 109   fn_body_b_num_fn -> B_NUM_FN empty
Rule 110   fn_body_b_num_fn -> B_NUM_FN fn_body_numeric_expression
Rule 111   fn_body_simple_numeric_variable -> SIMPLE_NUMERIC_VARIABLE
Rule 112   fn_body_numeric_array -> NUMERIC_ARRAY INTEGER RPAREN
Rule 113   fn_body_numeric_array -> NUMERIC_ARRAY INTEGER COMMA INTEGER RPAREN
Rule 114   fn_body_numeric_variable -> fn_body_simple_numeric_variable
Rule 115   fn_body_numeric_variable -> fn_body_numeric_array
Rule 116   cls -> CLS
Rule 117   end -> END
Rule 118   stop -> STOP
Rule 119   input -> INPUT string_expression SEMI_COLON SIMPLE_NUMERIC_VARIABLE
Rule 120   input -> INPUT string_expression SEMI_COLON STRING_VARIABLE
Rule 121   input -> INPUT SIMPLE_NUMERIC_VARIABLE
Rule 122   input -> INPUT STRING_VARIABLE
Rule 123   expression -> string_expression
Rule 124   expression -> numeric_expression
Rule 125   numeric_expression -> LPAREN numeric_expression RPAREN
Rule 126   numeric_expression -> numeric_expression CIRCUMFLEX numeric_expression
Rule 127   numeric_expression -> numeric_expression TIMES numeric_expression
Rule 128   numeric_expression -> numeric_expression DIVIDE numeric_expression
Rule 129   numeric_expression -> numeric_expression PLUS numeric_expression
Rule 130   numeric_expression -> numeric_expression MINUS numeric_expression
Rule 131   numeric_expression -> empty
Rule 132   numeric_expression -> primary
Rule 133   numeric_expression -> MINUS numeric_expression
Rule 134   primary -> INTEGER
Rule 135   primary -> FLOAT
Rule 136   primary -> u_num_fn
Rule 137   primary -> b_num_fn
Rule 138   primary -> simple_numeric_variable
Rule 139   primary -> numeric_array
Rule 140   b_num_fn -> B_NUM_FN empty
Rule 141   b_num_fn -> B_NUM_FN numeric_expression
Rule 142   u_num_fn -> FN numeric_expression
Rule 143   u_num_fn -> FN
Rule 144   simple_numeric_variable -> SIMPLE_NUMERIC_VARIABLE
Rule 145   numeric_array -> NUMERIC_ARRAY INTEGER RPAREN
Rule 146   numeric_array -> NUMERIC_ARRAY INTEGER COMMA INTEGER RPAREN
Rule 147   numeric_variable -> simple_numeric_variable
Rule 148   numeric_variable -> numeric_array
Rule 149   string_expression -> string_literal
Rule 150   string_expression -> string_variable
Rule 151   string_expression -> b_str_fn
Rule 152   string_literal -> STRING_LITERAL
Rule 153   string_variable -> simple_string_variable
Rule 154   string_variable -> string_array
Rule 155   b_str_fn -> B_STR_FN empty
Rule 156   b_str_fn -> B_STR_FN numeric_expression
Rule 157   simple_string_variable -> STRING_VARIABLE
Rule 158   string_array -> STRING_ARRAY numeric_expression RPAREN
Rule 159   string_array -> STRING_ARRAY numeric_expression COMMA numeric_expression RPAREN
Rule 160   empty -> LPAREN RPAREN

Terminals, with rules where they appear

ABS                  : 
ATN                  : 
BASE                 : 27 29
B_NUM_FN             : 109 110 140 141
B_STR_FN             : 155 156
CIRCUMFLEX           : 93 126
CLK                  : 
CLS                  : 116
COMMA                : 34 36 40 41 43 65 69 74 89 113 146 159
COS                  : 
DATA                 : 66
DEF                  : 90 91
DIM                  : 38 39 40 41 42 43
DIVIDE               : 95 128
DUMPFUN              : 45
DUMPVAR              : 44
END                  : 117
EQUALS               : 32 33 34 35 36 37 46 50 51 52 76 77 90 91
EVAL                 : 30
EXP                  : 
FLOAT                : 102 135
FN                   : 90 91 107 108 142 143
FOR                  : 76 77
GO                   : 58 59 61 62
GOSUB                : 55 56
GOTO                 : 53 54
GT                   : 47 48 50
IF                   : 46 47 48 49 50 51 52
INPUT                : 119 120 121 122
INT                  : 
INTEGER              : 1 2 27 28 33 34 34 35 36 36 38 39 40 40 41 41 42 43 43 46 47 48 49 50 51 52 53 55 64 101 112 113 113 134 145 146 146
LET                  : 32 33 34 35 36 37
LOG                  : 
LPAREN               : 91 92 107 125 160
LT                   : 47 49 51
MINUS                : 97 100 130 133
NEXT                 : 78
NUMERIC_ARRAY        : 33 34 39 41 112 113 145 146
ON                   : 58 59 60 61 62
OPTION               : 27 28 29
PLUS                 : 96 129
PRINT                : 79 80
RANDOMIZE            : 31
READ                 : 70
REM                  : 
RESTORE              : 75
RETURN               : 57
RND                  : 
RPAREN               : 33 34 35 36 38 39 40 41 42 43 91 92 107 112 113 125 145 146 158 159 160
SEMI_COLON           : 88 119 120
SGN                  : 
SIMPLE_NUMERIC_VARIABLE : 37 72 76 77 78 91 111 119 121 144
SIN                  : 
SQR                  : 
STEP                 : 76
STOP                 : 118
STRING_ARRAY         : 35 36 38 40 158 159
STRING_LITERAL       : 152
STRING_VARIABLE      : 32 73 120 122 157
TAB                  : 
TAN                  : 
THEN                 : 46 47 48 49 50 51 52
TIMES                : 94 127
TO                   : 58 59 60 62 76 77
error                : 3 28 29 42 43 54 56 59 60 61 62

Nonterminals, with rules where they appear

b_num_fn             : 137
b_str_fn             : 151
cls                  : 11
data                 : 19
data_list            : 66 67 67
data_list_sep        : 67
def                  : 13
dim                  : 22
dumpfun              : 15
dumpvar              : 14
empty                : 98 109 131 140 155
end                  : 5
eval_exp             : 26
expression           : 68 85
fn_body_b_num_fn     : 104
fn_body_numeric_array : 106 115
fn_body_numeric_expression : 90 91 92 93 93 94 94 95 95 96 96 97 97 100 107 110
fn_body_numeric_variable : 
fn_body_primary      : 99
fn_body_simple_numeric_variable : 105 114
fn_body_u_num_fn     : 103
for                  : 8
gosub                : 17
goto                 : 7
if                   : 6
input                : 12
let                  : 4
line                 : 0
line_number_list     : 58 59 60 61 63 63
line_number_list_sep : 63
next                 : 9
numeric_array        : 139 148
numeric_expression   : 30 33 34 37 46 46 47 47 48 48 49 49 50 50 51 51 58 60 61 62 76 76 76 77 77 124 125 126 126 127 127 128 128 129 129 130 130 133 141 142 156 158 159 159
numeric_variable     : 
on                   : 16
option               : 25
primary              : 132
print                : 10
print_comma          : 87
print_list           : 79 81 82 82 83
print_list_sep       : 81 82 83 84
print_semi_colon     : 86
randomize            : 23
read                 : 21
read_list            : 70 71 71
read_list_sep        : 71
restore              : 20
return               : 18
simple_numeric_variable : 138 147
simple_string_variable : 153
statement            : 1 3
stop                 : 24
string_array         : 154
string_expression    : 32 35 36 52 52 119 120 123
string_literal       : 149
string_variable      : 150
u_num_fn             : 136

Parsing method: LALR

state 0

    (0) S' -> . line
    (1) line -> . INTEGER statement
    (2) line -> . INTEGER
    (3) line -> . error statement

    INTEGER         shift and go to state 2
    error           shift and go to state 3

    line                           shift and go to state 1

state 1

    (0) S' -> line .



state 2

    (1) line -> INTEGER . statement
    (2) line -> INTEGER .
    (4) statement -> . let
    (5) statement -> . end
    (6) statement -> . if
    (7) statement -> . goto
    (8) statement -> . for
    (9) statement -> . next
    (10) statement -> . print
    (11) statement -> . cls
    (12) statement -> . input
    (13) statement -> . def
    (14) statement -> . dumpvar
    (15) statement -> . dumpfun
    (16) statement -> . on
    (17) statement -> . gosub
    (18) statement -> . return
    (19) statement -> . data
    (20) statement -> . restore
    (21) statement -> . read
    (22) statement -> . dim
    (23) statement -> . randomize
    (24) statement -> . stop
    (25) statement -> . option
    (26) statement -> . eval_exp
    (32) let -> . LET STRING_VARIABLE EQUALS string_expression
    (33) let -> . LET NUMERIC_ARRAY INTEGER RPAREN EQUALS numeric_expression
    (34) let -> . LET NUMERIC_ARRAY INTEGER COMMA INTEGER RPAREN EQUALS numeric_expression
    (35) let -> . LET STRING_ARRAY INTEGER RPAREN EQUALS string_expression
    (36) let -> . LET STRING_ARRAY INTEGER COMMA INTEGER RPAREN EQUALS string_expression
    (37) let -> . LET SIMPLE_NUMERIC_VARIABLE EQUALS numeric_expression
    (117) end -> . END
    (46) if -> . IF numeric_expression EQUALS numeric_expression THEN INTEGER
    (47) if -> . IF numeric_expression LT GT numeric_expression THEN INTEGER
    (48) if -> . IF numeric_expression GT numeric_expression THEN INTEGER
    (49) if -> . IF numeric_expression LT numeric_expression THEN INTEGER
    (50) if -> . IF numeric_expression GT EQUALS numeric_expression THEN INTEGER
    (51) if -> . IF numeric_expression LT EQUALS numeric_expression THEN INTEGER
    (52) if -> . IF string_expression EQUALS string_expression THEN INTEGER
    (53) goto -> . GOTO INTEGER
    (54) goto -> . GOTO error
    (76) for -> . FOR SIMPLE_NUMERIC_VARIABLE EQUALS numeric_expression TO numeric_expression STEP numeric_expression
    (77) for -> . FOR SIMPLE_NUMERIC_VARIABLE EQUALS numeric_expression TO numeric_expression
    (78) next -> . NEXT SIMPLE_NUMERIC_VARIABLE
    (79) print -> . PRINT print_list
    (80) print -> . PRINT
    (116) cls -> . CLS
    (119) input -> . INPUT string_expression SEMI_COLON SIMPLE_NUMERIC_VARIABLE
    (120) input -> . INPUT string_expression SEMI_COLON STRING_VARIABLE
    (121) input -> . INPUT SIMPLE_NUMERIC_VARIABLE
    (122) input -> . INPUT STRING_VARIABLE
    (90) def -> . DEF FN EQUALS fn_body_numeric_expression
    (91) def -> . DEF FN LPAREN SIMPLE_NUMERIC_VARIABLE RPAREN EQUALS fn_body_numeric_expression
    (44) dumpvar -> . DUMPVAR
    (45) dumpfun -> . DUMPFUN
    (58) on -> . ON numeric_expression GO TO line_number_list
    (59) on -> . ON error GO TO line_number_list
    (60) on -> . ON numeric_expression error TO line_number_list
    (61) on -> . ON numeric_expression GO error line_number_list
    (62) on -> . ON numeric_expression GO TO error
    (55) gosub -> . GOSUB INTEGER
    (56) gosub -> . GOSUB error
    (57) return -> . RETURN
    (66) data -> . DATA data_list
    (75) restore -> . RESTORE
    (70) read -> . READ read_list
    (38) dim -> . DIM STRING_ARRAY INTEGER RPAREN
    (39) dim -> . DIM NUMERIC_ARRAY INTEGER RPAREN
    (40) dim -> . DIM STRING_ARRAY INTEGER COMMA INTEGER RPAREN
    (41) dim -> . DIM NUMERIC_ARRAY INTEGER COMMA INTEGER RPAREN
    (42) dim -> . DIM error INTEGER RPAREN
    (43) dim -> . DIM error INTEGER COMMA INTEGER RPAREN
    (31) randomize -> . RANDOMIZE
    (118) stop -> . STOP
    (27) option -> . OPTION BASE INTEGER
    (28) option -> . OPTION error INTEGER
    (29) option -> . OPTION BASE error
    (30) eval_exp -> . EVAL numeric_expression

    $end            reduce using rule 2 (line -> INTEGER .)
    LET             shift and go to state 28
    END             shift and go to state 29
    IF              shift and go to state 30
    GOTO            shift and go to state 31
    FOR             shift and go to state 32
    NEXT            shift and go to state 33
    PRINT           shift and go to state 34
    CLS             shift and go to state 35
    INPUT           shift and go to state 36
    DEF             shift and go to state 37
    DUMPVAR         shift and go to state 38
    DUMPFUN         shift and go to state 39
    ON              shift and go to state 40
    GOSUB           shift and go to state 41
    RETURN          shift and go to state 42
    DATA            shift and go to state 43
    RESTORE         shift and go to state 44
    READ            shift and go to state 45
    DIM             shift and go to state 46
    RANDOMIZE       shift and go to state 47
    STOP            shift and go to state 48
    OPTION          shift and go to state 49
    EVAL            shift and go to state 50

    statement                      shift and go to state 4
    let                            shift and go to state 5
    end                            shift and go to state 6
    if                             shift and go to state 7
    goto                           shift and go to state 8
    for                            shift and go to state 9
    next                           shift and go to state 10
    print                          shift and go to state 11
    cls                            shift and go to state 12
    input                          shift and go to state 13
    def                            shift and go to state 14
    dumpvar                        shift and go to state 15
    dumpfun                        shift and go to state 16
    on                             shift and go to state 17
    gosub                          shift and go to state 18
    return                         shift and go to state 19
    data                           shift and go to state 20
    restore                        shift and go to state 21
    read                           shift and go to state 22
    dim                            shift and go to state 23
    randomize                      shift and go to state 24
    stop                           shift and go to state 25
    option                         shift and go to state 26
    eval_exp                       shift and go to state 27

state 3

    (3) line -> error . statement
    (4) statement -> . let
    (5) statement -> . end
    (6) statement -> . if
    (7) statement -> . goto
    (8) statement -> . for
    (9) statement -> . next
    (10) statement -> . print
    (11) statement -> . cls
    (12) statement -> . input
    (13) statement -> . def
    (14) statement -> . dumpvar
    (15) statement -> . dumpfun
    (16) statement -> . on
    (17) statement -> . gosub
    (18) statement -> . return
    (19) statement -> . data
    (20) statement -> . restore
    (21) statement -> . read
    (22) statement -> . dim
    (23) statement -> . randomize
    (24) statement -> . stop
    (25) statement -> . option
    (26) statement -> . eval_exp
    (32) let -> . LET STRING_VARIABLE EQUALS string_expression
    (33) let -> . LET NUMERIC_ARRAY INTEGER RPAREN EQUALS numeric_expression
    (34) let -> . LET NUMERIC_ARRAY INTEGER COMMA INTEGER RPAREN EQUALS numeric_expression
    (35) let -> . LET STRING_ARRAY INTEGER RPAREN EQUALS string_expression
    (36) let -> . LET STRING_ARRAY INTEGER COMMA INTEGER RPAREN EQUALS string_expression
    (37) let -> . LET SIMPLE_NUMERIC_VARIABLE EQUALS numeric_expression
    (117) end -> . END
    (46) if -> . IF numeric_expression EQUALS numeric_expression THEN INTEGER
    (47) if -> . IF numeric_expression LT GT numeric_expression THEN INTEGER
    (48) if -> . IF numeric_expression GT numeric_expression THEN INTEGER
    (49) if -> . IF numeric_expression LT numeric_expression THEN INTEGER
    (50) if -> . IF numeric_expression GT EQUALS numeric_expression THEN INTEGER
    (51) if -> . IF numeric_expression LT EQUALS numeric_expression THEN INTEGER
    (52) if -> . IF string_expression EQUALS string_expression THEN INTEGER
    (53) goto -> . GOTO INTEGER
    (54) goto -> . GOTO error
    (76) for -> . FOR SIMPLE_NUMERIC_VARIABLE EQUALS numeric_expression TO numeric_expression STEP numeric_expression
    (77) for -> . FOR SIMPLE_NUMERIC_VARIABLE EQUALS numeric_expression TO numeric_expression
    (78) next -> . NEXT SIMPLE_NUMERIC_VARIABLE
    (79) print -> . PRINT print_list
    (80) print -> . PRINT
    (116) cls -> . CLS
    (119) input -> . INPUT string_expression SEMI_COLON SIMPLE_NUMERIC_VARIABLE
    (120) input -> . INPUT string_expression SEMI_COLON STRING_VARIABLE
    (121) input -> . INPUT SIMPLE_NUMERIC_VARIABLE
    (122) input -> . INPUT STRING_VARIABLE
    (90) def -> . DEF FN EQUALS fn_body_numeric_expression
    (91) def -> . DEF FN LPAREN SIMPLE_NUMERIC_VARIABLE RPAREN EQUALS fn_body_numeric_expression
    (44) dumpvar -> . DUMPVAR
    (45) dumpfun -> . DUMPFUN
    (58) on -> . ON numeric_expression GO TO line_number_list
    (59) on -> . ON error GO TO line_number_list
    (60) on -> . ON numeric_expression error TO line_number_list
    (61) on -> . ON numeric_expression GO error line_number_list
    (62) on -> . ON numeric_expression GO TO error
    (55) gosub -> . GOSUB INTEGER
    (56) gosub -> . GOSUB error
    (57) return -> . RETURN
    (66) data -> . DATA data_list
    (75) restore -> . RESTORE
    (70) read -> . READ read_list
    (38) dim -> . DIM STRING_ARRAY INTEGER RPAREN
    (39) dim -> . DIM NUMERIC_ARRAY INTEGER RPAREN
    (40) dim -> . DIM STRING_ARRAY INTEGER COMMA INTEGER RPAREN
    (41) dim -> . DIM NUMERIC_ARRAY INTEGER COMMA INTEGER RPAREN
    (42) dim -> . DIM error INTEGER RPAREN
    (43) dim -> . DIM error INTEGER COMMA INTEGER RPAREN
    (31) randomize -> . RANDOMIZE
    (118) stop -> . STOP
    (27) option -> . OPTION BASE INTEGER
    (28) option -> . OPTION error INTEGER
    (29) option -> . OPTION BASE error
    (30) eval_exp -> . EVAL numeric_expression

    LET             shift and go to state 28
    END             shift and go to state 29
    IF              shift and go to state 30
    GOTO            shift and go to state 31
    FOR             shift and go to state 32
    NEXT            shift and go to state 33
    PRINT           shift and go to state 34
    CLS             shift and go to state 35
    INPUT           shift and go to state 36
    DEF             shift and go to state 37
    DUMPVAR         shift and go to state 38
    DUMPFUN         shift and go to state 39
    ON              shift and go to state 40
    GOSUB           shift and go to state 41
    RETURN          shift and go to state 42
    DATA            shift and go to state 43
    RESTORE         shift and go to state 44
    READ            shift and go to state 45
    DIM             shift and go to state 46
    RANDOMIZE       shift and go to state 47
    STOP            shift and go to state 48
    OPTION          shift and go to state 49
    EVAL            shift and go to state 50

    statement                      shift and go to state 51
    let                            shift and go to state 5
    end                            shift and go to state 6
    if                             shift and go to state 7
    goto                           shift and go to state 8
    for                            shift and go to state 9
    next                           shift and go to state 10
    print                          shift and go to state 11
    cls                            shift and go to state 12
    input                          shift and go to state 13
    def                            shift and go to state 14
    dumpvar                        shift and go to state 15
    dumpfun                        shift and go to state 16
    on                             shift and go to state 17
    gosub                          shift and go to state 18
    return                         shift and go to state 19
    data                           shift and go to state 20
    restore                        shift and go to state 21
    read                           shift and go to state 22
    dim                            shift and go to state 23
    randomize                      shift and go to state 24
    stop                           shift and go to state 25
    option                         shift and go to state 26
    eval_exp                       shift and go to state 27

state 4

    (1) line -> INTEGER statement .

    $end            reduce using rule 1 (line -> INTEGER statement .)


state 5

    (4) statement -> let .

    $end            reduce using rule 4 (statement -> let .)


state 6

    (5) statement -> end .

    $end            reduce using rule 5 (statement -> end .)


state 7

    (6) statement -> if .

    $end            reduce using rule 6 (statement -> if .)


state 8

    (7) statement -> goto .

    $end            reduce using rule 7 (statement -> goto .)


state 9

    (8) statement -> for .

    $end            reduce using rule 8 (statement -> for .)


state 10

    (9) statement -> next .

    $end            reduce using rule 9 (statement -> next .)


state 11

    (10) statement -> print .

    $end            reduce using rule 10 (statement -> print .)


state 12

    (11) statement -> cls .

    $end            reduce using rule 11 (statement -> cls .)


state 13

    (12) statement -> input .

    $end            reduce using rule 12 (statement -> input .)


state 14

    (13) statement -> def .

    $end            reduce using rule 13 (statement -> def .)


state 15

    (14) statement -> dumpvar .

    $end            reduce using rule 14 (statement -> dumpvar .)


state 16

    (15) statement -> dumpfun .

    $end            reduce using rule 15 (statement -> dumpfun .)


state 17

    (16) statement -> on .

    $end            reduce using rule 16 (statement -> on .)


state 18

    (17) statement -> gosub .

    $end            reduce using rule 17 (statement -> gosub .)


state 19

    (18) statement -> return .

    $end            reduce using rule 18 (statement -> return .)


state 20

    (19) statement -> data .

    $end            reduce using rule 19 (statement -> data .)


state 21

    (20) statement -> restore .

    $end            reduce using rule 20 (statement -> restore .)


state 22

    (21) statement -> read .

    $end            reduce using rule 21 (statement -> read .)


state 23

    (22) statement -> dim .

    $end            reduce using rule 22 (statement -> dim .)


state 24

    (23) statement -> randomize .

    $end            reduce using rule 23 (statement -> randomize .)


state 25

    (24) statement -> stop .

    $end            reduce using rule 24 (statement -> stop .)


state 26

    (25) statement -> option .

    $end            reduce using rule 25 (statement -> option .)


state 27

    (26) statement -> eval_exp .

    $end            reduce using rule 26 (statement -> eval_exp .)


state 28

    (32) let -> LET . STRING_VARIABLE EQUALS string_expression
    (33) let -> LET . NUMERIC_ARRAY INTEGER RPAREN EQUALS numeric_expression
    (34) let -> LET . NUMERIC_ARRAY INTEGER COMMA INTEGER RPAREN EQUALS numeric_expression
    (35) let -> LET . STRING_ARRAY INTEGER RPAREN EQUALS string_expression
    (36) let -> LET . STRING_ARRAY INTEGER COMMA INTEGER RPAREN EQUALS string_expression
    (37) let -> LET . SIMPLE_NUMERIC_VARIABLE EQUALS numeric_expression

    STRING_VARIABLE shift and go to state 52
    NUMERIC_ARRAY   shift and go to state 53
    STRING_ARRAY    shift and go to state 54
    SIMPLE_NUMERIC_VARIABLE shift and go to state 55


state 29

    (117) end -> END .

    $end            reduce using rule 117 (end -> END .)


state 30

    (46) if -> IF . numeric_expression EQUALS numeric_expression THEN INTEGER
    (47) if -> IF . numeric_expression LT GT numeric_expression THEN INTEGER
    (48) if -> IF . numeric_expression GT numeric_expression THEN INTEGER
    (49) if -> IF . numeric_expression LT numeric_expression THEN INTEGER
    (50) if -> IF . numeric_expression GT EQUALS numeric_expression THEN INTEGER
    (51) if -> IF . numeric_expression LT EQUALS numeric_expression THEN INTEGER
    (52) if -> IF . string_expression EQUALS string_expression THEN INTEGER
    (125) numeric_expression -> . LPAREN numeric_expression RPAREN
    (126) numeric_expression -> . numeric_expression CIRCUMFLEX numeric_expression
    (127) numeric_expression -> . numeric_expression TIMES numeric_expression
    (128) numeric_expression -> . numeric_expression DIVIDE numeric_expression
    (129) numeric_expression -> . numeric_expression PLUS numeric_expression
    (130) numeric_expression -> . numeric_expression MINUS numeric_expression
    (131) numeric_expression -> . empty
    (132) numeric_expression -> . primary
    (133) numeric_expression -> . MINUS numeric_expression
    (149) string_expression -> . string_literal
    (150) string_expression -> . string_variable
    (151) string_expression -> . b_str_fn
    (160) empty -> . LPAREN RPAREN
    (134) primary -> . INTEGER
    (135) primary -> . FLOAT
    (136) primary -> . u_num_fn
    (137) primary -> . b_num_fn
    (138) primary -> . simple_numeric_variable
    (139) primary -> . numeric_array
    (152) string_literal -> . STRING_LITERAL
    (153) string_variable -> . simple_string_variable
    (154) string_variable -> . string_array
    (155) b_str_fn -> . B_STR_FN empty
    (156) b_str_fn -> . B_STR_FN numeric_expression
    (142) u_num_fn -> . FN numeric_expression
    (143) u_num_fn -> . FN
    (140) b_num_fn -> . B_NUM_FN empty
    (141) b_num_fn -> . B_NUM_FN numeric_expression
    (144) simple_numeric_variable -> . SIMPLE_NUMERIC_VARIABLE
    (145) numeric_array -> . NUMERIC_ARRAY INTEGER RPAREN
    (146) numeric_array -> . NUMERIC_ARRAY INTEGER COMMA INTEGER RPAREN
    (157) simple_string_variable -> . STRING_VARIABLE
    (158) string_array -> . STRING_ARRAY numeric_expression RPAREN
    (159) string_array -> . STRING_ARRAY numeric_expression COMMA numeric_expression RPAREN

    LPAREN          shift and go to state 59
    MINUS           shift and go to state 60
    INTEGER         shift and go to state 57
    FLOAT           shift and go to state 66
    STRING_LITERAL  shift and go to state 71
    B_STR_FN        shift and go to state 74
    FN              shift and go to state 75
    B_NUM_FN        shift and go to state 76
    SIMPLE_NUMERIC_VARIABLE shift and go to state 77
    NUMERIC_ARRAY   shift and go to state 78
    STRING_VARIABLE shift and go to state 79
    STRING_ARRAY    shift and go to state 80

    numeric_expression             shift and go to state 56
    string_expression              shift and go to state 58
    empty                          shift and go to state 61
    primary                        shift and go to state 62
    string_literal                 shift and go to state 63
    string_variable                shift and go to state 64
    b_str_fn                       shift and go to state 65
    u_num_fn                       shift and go to state 67
    b_num_fn                       shift and go to state 68
    simple_numeric_variable        shift and go to state 69
    numeric_array                  shift and go to state 70
    simple_string_variable         shift and go to state 72
    string_array                   shift and go to state 73

state 31

    (53) goto -> GOTO . INTEGER
    (54) goto -> GOTO . error

    INTEGER         shift and go to state 81
    error           shift and go to state 82


state 32

    (76) for -> FOR . SIMPLE_NUMERIC_VARIABLE EQUALS numeric_expression TO numeric_expression STEP numeric_expression
    (77) for -> FOR . SIMPLE_NUMERIC_VARIABLE EQUALS numeric_expression TO numeric_expression

    SIMPLE_NUMERIC_VARIABLE shift and go to state 83


state 33

    (78) next -> NEXT . SIMPLE_NUMERIC_VARIABLE

    SIMPLE_NUMERIC_VARIABLE shift and go to state 84


state 34
